# modelcall

./: .cursorignore  README.md  REFACTORING_COMPLETE.md  pyproject.toml  requirements.txt  siflow-0.0.2-py3-none-any.whl
configs/distillation/: datasets_chatml.yaml  merge_groups.yaml  response_config.yaml
configs/models/: README.md  claude-sonnet-4.5-thinking.yaml  claude-sonnet-4.5.yaml  deepseek-v3-local.yaml  deepseek-v3.yaml  dpsk-v3-0526.yaml  dpsk-v3-pro.yaml  gpt-oss-120b-high-think-2.yaml  gpt-oss-120b-high-think.yaml  gpt-oss-120b.yaml  qwen3-480b-external.yaml  qwen3-480b-internal.yaml  qwen3-480b.yaml  qwen3-coder-480b-wzhang.yaml  qwen3-coder-480b.yaml  siliconflow.yaml
configs/prompts/: code_corpus_rating_v0.3.yaml  en_corpus_rating_v0.1.yaml  repo_packaging_quality_rating_v1.0.yaml
configs/siflow/: default_config.yaml  (+1 more)
docs/: response_generator_optimization_v2.md  response_generator_performance_optimization.md
modelcall/: __init__.py  __main__.py  cli.py  data_io.py  logging_manager.py  task_manager.py
scripts/: batch_distillation.py  check_high_think.py  convert_llama_nemotron_to_chatml.sh  convert_nemotron_v2_to_chatml.sh  convert_oo1_to_chatml.sh  create_task.py  demo.sh  manage_tasks.sh  merge_qwen3_retry_data.sh  run_distillation_task.sh  run_gpt_oss_20251011.sh  run_gpt_oss_high_think2_20251015.sh  run_gpt_oss_high_think2_llama_nemotron.sh  run_gpt_oss_high_think2_nemotron_v2.sh  run_gpt_oss_high_think2_oo1.sh  run_gpt_oss_opc_stage1_high_think_20251014.sh  run_task.sh  test_llama_nemotron_structure.py  test_nemotron_v2_convert.py
(+99 files in other folders)
