[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modelcall"
version = "0.1.0"
authors = [{ name = "ModelCall" }]
description = "Minimal data read-score-write pipeline with pluggable FS backends"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"python-dotenv>=1.0.1",
	"transformers",
	"datasets",
	"huggingface_hub[hf_transfer]",
	"vllm",
	"tenacity>=9.0.0",
	"openai>=1.30.0",
	"prettytable>=3.0.0",
	"openpyxl>=3.1.5",
	"anthropic>=0.47.2",
	"jsonpickle>=4.0.2",
	"pandas",
	"timeout_decorator",
	"pyarrow",
	"pyyaml",
	"easydict",
	"smart_open[s3]",
	"tiktoken",
	"orjsonl",
	"statsmodels",
	"krippendorff",
	"tos",
	"tosfs",
	"fsspec",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modelcall*"]
exclude = ["data*", "logs*", "configs*", "scripts*"]

[project.scripts]
modelcall = "modelcall.cli:main"

[tool.uv]
package = false
dev-dependencies = []

# Use Tsinghua Tuna PyPI mirror for this project
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
